--- a/apps/host-ui/src/index.html
+++ b/apps/host-ui/src/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
+    <h1>HOST UI</h1>
     <div id="root"></div>
   </body>
 </html>
